<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="270dp"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/baseline_check_circle_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paymentSuccess"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:text="@string/thanks"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueBuy"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/custom_button_teal_corner_5"
            android:layout_margin="15dp"
            android:text="OK"
            android:id="@+id/btnOkPayment"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>