<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_dialog_reset_password"
            android:text="@string/txtResetPass"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_layout_border_bottom_white"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edtEmailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_editext_login"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="15dp"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnOK"
                    android:id="@+id/btnOK"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_btn_login"
                    android:textColor="@color/white"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancle"
                    android:id="@+id/btnCancle"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_btn_login"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>